# llm_project

./: .gitignore  package-lock.json  package.json  render.yaml
backend/: README.md  pyproject.toml  requirements.txt
backend/src/: main.py
backend/src/agents/: game_agent.py  game_agent_err.py  game_agent_steh.py
backend/src/api/: chat_routes.py
backend/src/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/tools/: database_tools.py  rawg_tools.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Card.tsx  Chatbot.tsx  Chatbot2.tsx  ChatbotChatMessage.tsx  Deals.tsx  DealsChatMessage.tsx  Explore.tsx  FilterButton.tsx  Messages.tsx  Navbar.tsx  Profile.tsx  ProfileMenuItem.tsx  WishList.tsx
frontend/src/services/: api.ts
